[DMG-361] Fix artifact deployment

--- a/manifests/main.yaml
+++ b/manifests/main.yaml
@@ -331,7 +331,7 @@ application:
                           cicd_infrastructure:
                             jenkins:
                               nexus:
-                                endpoint: "{$.environment.nexus.nexus_public_ips[0]}"
+                                endpoint: "http://{$.environment.nexus.nexus_public_ips[0]}:8081/nexus"
 
                   - gerrit_jenkins:
                       phase: gerrit_setup
