Fix chef version to '11.8.2' Set static ip for VM - no port forwarding needs now Set hostname equal to ip address - need for jira/gerrit and other services which use fqdn

--- a/cookbooks/cicd_infrastructure/Vagrantfile
+++ b/cookbooks/cicd_infrastructure/Vagrantfile
@@ -2,14 +2,14 @@
 # vi: set ft=ruby :
 
 Vagrant.configure('2') do |config|
-  config.omnibus.chef_version = 'latest'
+  config.omnibus.chef_version = '11.8.2'
   config.berkshelf.enabled = true
 
   config.vm.provider "virtualbox" do |v, override|
     override.vm.box = 'centos-6.5'
     override.vm.box_url = "http://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_#{override.vm.box}_chef-provisionerless.box"
-    config.vm.hostname = 'cicd-infrastructure'
-
+    config.vm.hostname = '192.168.50.4'
+    config.vm.network "private_network", ip: "192.168.50.4"
     config.cache.scope = :box
     config.cache.auto_detect = true
 
