--- a/cookbooks/cicd_infrastructure/Vagrantfile
+++ b/cookbooks/cicd_infrastructure/Vagrantfile
@@ -40,6 +40,7 @@ Vagrant.configure('2') do |config|
   end
 
   config.vm.provision :chef_solo do |chef|
+    chef.cookbooks_path = '../'
     chef.json = {
     }
     chef.run_list = [
